--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "author": "wukaiwei1 <2596862515@qq.com>",
   "license": "MIT",
   "devDependencies": {
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   },
-  "scripts":{
-    "build":"webpack"
+  "scripts": {
+    "build": "webpack"
   }
 }
