--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "wukaiwei1 <2596862515@qq.com>",
   "license": "MIT",
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
