--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "wukaiwei1 <2596862515@qq.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
