--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
+    "@vue/compiler-sfc": "^3.2.37",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
@@ -16,6 +17,8 @@
     "less-loader": "^11.0.0",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
+    "vue-loader": "^17.0.0",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2"
@@ -23,5 +26,8 @@
   "scripts": {
     "build": "webpack",
     "serve": "webpack serve"
+  },
+  "dependencies": {
+    "vue": "^3.2.36"
   }
 }
